Refactored CloudParameters and pulled out all the font size calculations into a new class called CloudWordInfoBuilder.