@@ -28,18 +28,14 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Set;
-import java.util.StringTokenizer;
 
-import org.baderlab.wordcloud.internal.Stemmer;
-import org.baderlab.wordcloud.internal.cluster.SemanticSummaryClusterBuilder;
+import org.baderlab.wordcloud.internal.cluster.CloudDisplayStyles;
+import org.baderlab.wordcloud.internal.cluster.CloudWordInfo;
+import org.baderlab.wordcloud.internal.cluster.CloudWordInfoBuilder;
 import org.baderlab.wordcloud.internal.cluster.WordPair;
-import org.baderlab.wordcloud.internal.ui.cloud.CloudDisplayStyles;
-import org.baderlab.wordcloud.internal.ui.cloud.CloudWordInfo;
 import org.cytoscape.model.CyColumn;
 import org.cytoscape.model.CyNetwork;
 import org.cytoscape.model.CyNode;
@@ -58,66 +54,38 @@ import org.cytoscape.model.CyTableManager;
 
 public class CloudParameters implements Comparable<CloudParameters>, CloudProvider
 {
-	
 	//Default Values for User Input
 	public static final double DEFAULT_NET_WEIGHT = 0.0; // this can be overridden in wordcloud.props
 	public static final String DEFAULT_ATT_NAME = CyNetwork.NAME;
 	public static final int    DEFAULT_MAX_WORDS = 250;
 	public static final double DEFAULT_CLUSTER_CUTOFF = 1.0;
-	public static final String DEFAULT_STYLE = CloudDisplayStyles.DEFAULT_STYLE;
 	
-
-	//VARIABLES
+	private final NetworkParameters networkParams; //parent network
+	private CloudWordInfoBuilder cloudWordInfoBuilder;
+	
 	private String cloudName;
 	private List<String> attributeNames;
-	private String displayStyle;
+	private CloudDisplayStyles displayStyle;
 	
-	private NetworkParameters networkParams; //parent network
-	
-	private int maxWords;
 	private int cloudNum; //Used to order the clouds for each network
-	
-	private Map<String, Set<CyNode>> stringNodeMapping;
-	private Map<String, Integer> networkCounts; // counts for whole network
-	private Map<String, Integer> selectedCounts; // counts for selected nodes
-	private Map<WordPair, Integer> networkPairCounts;
-	private Map<WordPair, Integer> selectedPairCounts;
-	private Map<String, Double> ratios;
-	private Map<WordPair, Double> pairRatios;
-	private List<CloudWordInfo> cloudWords;
-	
-	
+	private int maxWords = DEFAULT_MAX_WORDS;
+	private double clusterCutoff =  DEFAULT_CLUSTER_CUTOFF;
 	private double netWeightFactor;
-	private double clusterCutoff;
 	
-	private double minRatio;
-	private double maxRatio;
-	private double meanRatio;
+	private String clusterColumnName;
+	private CyTable clusterTable;
 	
-	private double meanWeight;
-	private double minWeight;
-	private double maxWeight;
-	
-	private boolean countInitialized = false; //true when network counts are initialized
-	private boolean selInitialized = false; //true when selected counts initialized
-	private boolean ratiosInitialized = false; //true when ratios are computed
-//	private boolean useNetNormal = false; //true when network counts are used
 	
 	//String Delimeters
 	private static final String NODEDELIMITER = "CloudParamNodeDelimiter";
 	private static final String WORDDELIMITER = "CloudParamWordDelimiter";
-	private static final char controlChar = '\u001F';
 	
 	//Network Name creation variables
 	private int networkCount = 1;
 	private static final String NETWORKNAME = "Net";
 	private static final String SEPARATER = "_";
-	private static final double EPSILON = 0.00001;
 	
-	private String clusterColumnName;
-	private CyTable clusterTable;
 	
-	//CONSTRUCTORS
 	
 	/**
 	 * Default constructor to create a fresh instance
@@ -125,20 +93,24 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 	protected CloudParameters(NetworkParameters networkParams)
 	{
 		this.networkParams = networkParams;
-		this.stringNodeMapping = new HashMap<String, Set<CyNode>>();
-		this.networkCounts = new HashMap<String, Integer>();
-		this.selectedCounts = new HashMap<String, Integer>();
-		this.networkPairCounts = new HashMap<WordPair, Integer>();
-		this.selectedPairCounts = new HashMap<WordPair, Integer>();
-		this.ratios = new HashMap<String, Double>();
-		this.pairRatios = new HashMap<WordPair, Double>();
-		this.cloudWords = new ArrayList<CloudWordInfo>();
-		
 		this.netWeightFactor = networkParams.getManager().getDefaultNetWeight();
-		this.clusterCutoff = DEFAULT_CLUSTER_CUTOFF;
-		this.maxWords = DEFAULT_MAX_WORDS;
-		this.displayStyle = DEFAULT_STYLE;
+		this.displayStyle = CloudDisplayStyles.getDefault();
 	}
+	
+	
+	public void invalidate() {
+		cloudWordInfoBuilder = null;
+	}
+	
+	
+	private CloudWordInfoBuilder getBuilder() {
+		if(cloudWordInfoBuilder == null) {
+			cloudWordInfoBuilder = new CloudWordInfoBuilder(this);
+			cloudWordInfoBuilder.calculateFontSizes();
+		}
+		return cloudWordInfoBuilder;
+	}
+	
 	
 	/**
 	 * Constructor to create CloudParameters from a cytoscape property file
@@ -164,16 +136,18 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 		}
 		
 		this.cloudName = props.get("CloudName");
-		this.displayStyle = props.get("DisplayStyle");
-		this.netWeightFactor = new Double(props.get("NetWeightFactor"));
+		this.displayStyle = CloudDisplayStyles.fromString(props.get("DisplayStyle"));
+		
+		
+		this.netWeightFactor = Double.valueOf(props.get("NetWeightFactor"));
 		this.clusterCutoff = new Double(props.get("ClusterCutoff"));
-		this.countInitialized = Boolean.parseBoolean(props.get("CountInitialized"));
-		this.selInitialized = Boolean.parseBoolean(props.get("SelInitialized"));
-		this.ratiosInitialized = Boolean.parseBoolean(props.get("RatiosInitialized"));
-		this.maxRatio = new Double(props.get("MaxRatio"));
-		this.minRatio = new Double(props.get("MinRatio"));
-		this.maxWords = new Integer(props.get("MaxWords"));
-		this.cloudNum = new Integer(props.get("CloudNum"));
+////		this.countInitialized = Boolean.parseBoolean(props.get("CountInitialized"));
+////		this.selInitialized = Boolean.parseBoolean(props.get("SelInitialized"));
+////		this.ratiosInitialized = Boolean.parseBoolean(props.get("RatiosInitialized"));
+//		this.maxRatio = new Double(props.get("MaxRatio"));
+//		this.minRatio = new Double(props.get("MinRatio"));
+//		this.maxWords = new Integer(props.get("MaxWords"));
+//		this.cloudNum = new Integer(props.get("CloudNum"));
 		
 		// Reload cloud group table if it has been created (through command line)
 		for (CyTable table : networkParams.getManager().getTableManager().getAllTables(true)) {
@@ -189,29 +163,29 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 //		else
 //		{this.useNetNormal = Boolean.parseBoolean(props.get("UseNetNormal"));}
 		
-		//Backwards compatible meanRatio
-		String val = props.get("MeanRatio");
-		if (val == null)
-		{this.ratiosInitialized = false;}
-		else
-		{this.meanRatio = new Double(props.get("MeanRatio"));}
-		
-		//Backwards compatible Weights
-		val = props.get("MeanWeight");
-		if (val != null)
-		{this.meanWeight = new Double(props.get("MeanWeight"));}
-		
-		val = props.get("MinWeight");
-		if (val != null)
-		{this.minWeight = new Double(props.get("MinWeight"));}
-		
-		val = props.get("MaxWeight");
-		if (val != null)
-		{this.maxWeight = new Double(props.get("MaxWeight"));}
-		
-		val = props.get("NetworkCount");
-		if (val != null)
-		{this.networkCount = new Integer(props.get("NetworkCount"));}
+//		//Backwards compatible meanRatio
+//		String val = props.get("MeanRatio");
+//		if (val == null)
+//		{this.ratiosInitialized = false;}
+//		else
+//		{this.meanRatio = new Double(props.get("MeanRatio"));}
+//		
+//		//Backwards compatible Weights
+//		val = props.get("MeanWeight");
+//		if (val != null)
+//		{this.meanWeight = new Double(props.get("MeanWeight"));}
+//		
+//		val = props.get("MinWeight");
+//		if (val != null)
+//		{this.minWeight = new Double(props.get("MinWeight"));}
+//		
+//		val = props.get("MaxWeight");
+//		if (val != null)
+//		{this.maxWeight = new Double(props.get("MaxWeight"));}
+//		
+//		val = props.get("NetworkCount");
+//		if (val != null)
+//		{this.networkCount = new Integer(props.get("NetworkCount"));}
 		
 		//Rebuild attribute List
 		String value = props.get("AttributeName");
@@ -224,23 +198,23 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 		}
 		this.attributeNames = attributeList;
 		
-		//Rebuild CloudWords
-		if (props.containsKey("CloudWords")) //handle the empty case
-		{
-			String value2 = props.get("CloudWords");
-			String[] words = value2.split(WORDDELIMITER);
-			ArrayList<CloudWordInfo> cloudWordList = new ArrayList<CloudWordInfo>();
-			for (int i = 0; i < words.length; i++)
-			{
-				String wordInfo = words[i];
-				CloudWordInfo curInfo = new CloudWordInfo(wordInfo);
-				curInfo.setCloudParameters(this);
-				cloudWordList.add(curInfo);
-			}
-			this.cloudWords = cloudWordList;
-		}
-		else
-			this.cloudWords = new ArrayList<CloudWordInfo>();
+//		//Rebuild CloudWords
+//		if (props.containsKey("CloudWords")) //handle the empty case
+//		{
+//			String value2 = props.get("CloudWords");
+//			String[] words = value2.split(WORDDELIMITER);
+//			ArrayList<CloudWordInfo> cloudWordList = new ArrayList<CloudWordInfo>();
+//			for (int i = 0; i < words.length; i++)
+//			{
+//				String wordInfo = words[i];
+//				CloudWordInfo curInfo = new CloudWordInfo(wordInfo);
+//				curInfo.setCloudParameters(this);
+//				cloudWordList.add(curInfo);
+//			}
+//			this.cloudWords = cloudWordList;
+//		}
+//		else
+//			this.cloudWords = new ArrayList<CloudWordInfo>();
 		
 		CyTable cloudTable = networkParams.getNetwork().getDefaultNodeTable();
 		if (cloudTable == null) {
@@ -281,6 +255,7 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 	}
 	
 	
+	// MKTODO shouldn't this rename the cloud column?
 	public void rename(String newName) {
 		if(newName.equals(cloudName))
 			return;
@@ -295,518 +270,8 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 		cloudModelManager.fireCloudRenamed(this);
 	}
 	
-	//Calculate Counts
-	/**
-	 * Constructs stringNodeMapping and networkCounts based on the list of
-	 * nodes contained in networkParams.
-	 */
-	public void initializeNetworkCounts()
-	{
-		CyNetwork network = networkParams.getNetwork();
-		
-		//do nothing if already initialized
-		if (countInitialized || network == null || attributeNames == null)
-			return;
-		
-		//Clear old counts
-		this.networkCounts = new HashMap<String, Integer>();
-		this.networkPairCounts = new HashMap<WordPair, Integer>();
-		this.stringNodeMapping = new HashMap<String, Set<CyNode>>();
-		
-		CyTable table = network.getDefaultNodeTable();
-		for (String attributeName : attributeNames)
-		{
-			for (CyNode curNode : networkParams.getNetwork().getNodeList())
-			{
-				CyColumn column = table.getColumn(attributeName);
-				if (column.getType().equals(String.class)) {
-					String value = table.getRow(curNode.getSUID()).get(attributeName, String.class);
-					updateNetworkWordCounts(curNode, value);
-				}
-				if (column.getType().equals(List.class) && column.getListElementType().equals(String.class)) {
-					List<String> list = table.getRow(curNode.getSUID()).getList(attributeName, String.class);
-					if (list == null) {
-						continue;
-					}
-					String value = join(" ", list);
-					updateNetworkWordCounts(curNode, value);
-				}
-			}//end attribute iterator
-		}//end node iterator
-		
-		countInitialized = true;
-	}
 	
-	private void updateNetworkWordCounts(CyNode curNode, String nodeValue) {
-		if (nodeValue == null) // problem with nodes or attributes
-			return;
-	
-		List<String> wordSet = this.processNodeString(nodeValue);
-		String lastWord = ""; //Used for calculating pair counts
-    
-		//Iterate through all words
-		Iterator<String> wordIter = wordSet.iterator();
-		while(wordIter.hasNext())
-		{
-			String curWord = wordIter.next();
-		
-			//Check filters
-			WordFilter filter = networkParams.getFilter();
-			if (!filter.contains(curWord))
-			{
-				//If this word has not been encountered, or not encountered
-				//in this node, add it to our mappings and counts
-				Map<String, Set<CyNode>> curMapping = this.getStringNodeMapping();
-		
-				//If we have not encountered this word, add it to the mapping
-				if (!curMapping.containsKey(curWord))
-				{
-					curMapping.put(curWord, new HashSet<CyNode>());
-					networkCounts.put(curWord, 0);
-				}
-			
-				//Add node to mapping, update counts
-				curMapping.get(curWord).add(curNode);
-				int num = networkCounts.get(curWord);
-				num = num + 1;
-				networkCounts.put(curWord, num);
-			
-			
-				//Add to pair counts
-				if (!lastWord.equals(""))
-				{
-					WordPair pair = new WordPair(lastWord, curWord, this);
-					
-					Integer curPairCount = networkPairCounts.get(pair);
-					int count;
-					if (curPairCount == null) {
-						count = 1;
-					} else {
-						count = curPairCount;
-					}
-				
-					networkPairCounts.put(pair, count);
-				}
-			
-				//Update curWord to be LastWord
-				lastWord = curWord;
-			
-			}//end filter if
-		}// word iterator
-	}
-	
-	private void updateSelectedWordCounts(CyNode curNode, String nodeValue) {
-		if (nodeValue == null) // problem with nodes or attributes
-			return;
-	
-		List<String> wordSet = this.processNodeString(nodeValue);
-		String lastWord = ""; //Used for calculating pair counts
-    
-		//Iterate through all words
-		Iterator<String> wordIter = wordSet.iterator();
-		while(wordIter.hasNext())
-		{
-			String curWord = wordIter.next();
-		
-			//Check filters
-			WordFilter filter = networkParams.getFilter();
-			if (!filter.contains(curWord))
-			{
-				//Add to selected Counts
-			
-				int curCount = 0; 
-			
-				if (selectedCounts.containsKey(curWord))
-					curCount = selectedCounts.get(curWord);
-			
-				//Update Count
-				curCount = curCount + 1;
-			
-				//Add updated count to HashMap
-				selectedCounts.put(curWord, curCount);
-			
-				//Add to pair counts
-				if (!lastWord.equals(""))
-				{
-					WordPair pair = new WordPair(lastWord, curWord, this);
-					
-					Integer curPairCount = selectedPairCounts.get(pair);
-					int count;
-					if (curPairCount == null) {
-						count = 1;
-					} else {
-						count = curPairCount;
-					}
-				
-					selectedPairCounts.put(pair, count);
-				}
-			
-				//Update curWord to be LastWord
-				lastWord = curWord;
-			
-			}//end filter if
-		}// word iterator
-	}
-	
-	/**
-	 * Constructs selectedCounts based on the list of nodes contained in 
-	 * selectedNodes list.
-	 * 
-	 * MKTODO does this have to be called manually, can we fire from an event listener of some sort
-	 */
-	public void updateSelectedCounts()
-	{
-		CyNetwork network = networkParams.getNetwork();
-		//do nothing if selected hasn't changed initialized
-		if (selInitialized || attributeNames == null || network == null)
-			return;
-		
-		//Initialize if needed
-		if (!countInitialized)
-			this.initializeNetworkCounts();
-		
-		//Clear old counts
-		this.selectedCounts = new HashMap<String, Integer>();
-		this.selectedPairCounts = new HashMap<WordPair, Integer>();
-		
-		CyTable table = network.getDefaultNodeTable();
-		for (String attributeName : attributeNames)
-		{
-			for (CyNode curNode : getSelectedNodes())
-			{
-				CyColumn column = table.getColumn(attributeName);
-				if (column.getType().equals(String.class)) {
-					String value = table.getRow(curNode.getSUID()).get(attributeName, String.class);
-					updateSelectedWordCounts(curNode, value);
-				}
-				if (column.getType().equals(List.class) && column.getListElementType().equals(String.class)) {
-					List<String> list = table.getRow(curNode.getSUID()).getList(attributeName, String.class);
-					if (list == null) {
-						continue;
-					}
-					String value = join(" ", list);
-					updateSelectedWordCounts(curNode, value);
-				}
-			}// end attribute list
-		}//end node iterator
-		
-		calculateWeights();
-		
-		selInitialized = true;
-	}
-	
-	/**
-	 * Sets the mean weight value to be the average of all ratios if a network normalization
-	 * factor of 0 were to be used.  The values are also translated so the min value is 0.
-	 */
-	public void calculateWeights()
-	{
-		double curMin = 0.0;
-		double curMax = 0.0;
-		double total = 0.0;
-		int count = 0;
-		
-		//Iterate through to calculate ratios
-		boolean initialized = false;
-		for (Entry<String, Integer> entry : selectedCounts.entrySet())
-		{
-			String curWord = entry.getKey();
-			
-			/* Ratio: (selCount/selTotal)/((netCount/netTotal)^netWeightFactor)
-			 * But, to avoid underflow from small probabilities we calculate it as follows:
-			 * (selCount * (netTotal^netWeightFactor))/(selTotal * (netCount^netWeightFactor))
-			 * This is the same as the original definition of ratio, just with some
-			 * different algebra.
-			 */
-			int selTotal = this.getSelectedNumNodes();
-			int selCount = entry.getValue();
-			int netCount = networkCounts.get(curWord);
-			double newNetCount = Math.pow(netCount, 0.0);
-			int netTotal = this.getNetworkNumNodes();
-			double newNetTotal = Math.pow(netTotal, 0.0);
-			
-			double numerator = selCount * newNetTotal;
-			double denominator = selTotal * newNetCount;
-			double ratio = numerator/denominator;
-			
-			total = total + ratio;
-			count = count + 1;
-			
-			//Update max/min ratios
-			if (!initialized)
-			{
-				curMax = ratio;
-				curMin = ratio;
-				initialized = true;
-			}
-			
-			if (ratio > curMax)
-				curMax = ratio;
-			
-			if (ratio < curMin)
-				curMin = ratio;
-		}
-		
-		//store
-		this.setMinWeight(curMin);
-		this.setMeanWeight(total/count);
-		this.setMaxWeight(curMax);
-	}
-	
-	/**
-	 * Calculates ratios given the current selectedNode counts.
-	 */
-	public void updateRatios()
-	{
-		//already up to date
-		if (ratiosInitialized)
-			return;
-		
-		//Check that selected counts are up to date
-		if(!selInitialized)
-			this.updateSelectedCounts();
-		
-		//SINGLE COUNTS
-		//Clear old counts
-		this.ratios = new HashMap<String, Double>();
-		
-		double curMin = 0.0;
-		double curMax = 0.0;
-		double total = 0.0;
-		int count = 0;
-		
-		//Iterate through to calculate ratios
-		boolean initialized = false;
-		for (Entry<String, Integer> entry : selectedCounts.entrySet())
-		{
-			String curWord = entry.getKey();
-			
-			/* Ratio: (selCount/selTotal)/((netCount/netTotal)^netWeightFactor)
-			 * But, to avoid underflow from small probabilities we calculate it as follows:
-			 * (selCount * (netTotal^netWeightFactor))/(selTotal * (netCount^netWeightFactor))
-			 * This is the same as the original definition of ratio, just with some
-			 * different algebra.
-			 */
-			int selTotal = this.getSelectedNumNodes();
-			int selCount = entry.getValue();
-			int netCount = networkCounts.get(curWord);
-			double newNetCount = Math.pow(netCount, netWeightFactor);
-			int netTotal = this.getNetworkNumNodes();
-			double newNetTotal = Math.pow(netTotal, netWeightFactor);
-			
-			double numerator = selCount * newNetTotal;
-			double denominator = selTotal * newNetCount;
-			double ratio = numerator/denominator;
-			
-			ratios.put(curWord, ratio);
-			
-			total = total + ratio;
-			count = count + 1;
-			
-			//Update max/min ratios
-			if (!initialized)
-			{
-				curMax = ratio;
-				curMin = ratio;
-				initialized = true;
-			}
-			
-			if (ratio > curMax)
-				curMax = ratio;
-			
-			if (ratio < curMin)
-				curMin = ratio;
-		}
-		
-		this.setMaxRatio(curMax);
-		this.setMinRatio(curMin);
-		this.setMeanRatio(total/count);
-		
-		//PAIR COUNTS
-		//Clear old counts
-		this.pairRatios = new HashMap<WordPair, Double>();
-		
-		//Iterate through to calculate ratios
-		for (Entry<WordPair, Integer> entry : selectedPairCounts.entrySet())
-		{
-			WordPair pair = entry.getKey();
-			/* Ratio: (selCount/selTotal)/((netCount/netTotal)^netWeightFactor)
-			 * But, to avoid underflow from small probabilities we calculate it as follows:
-			 * (selCount * (netTotal^netWeightFactor))/(selTotal * (netCount^netWeightFactor))
-			 * This is the same as the original definition of ratio, just with some
-			 * different algebra.
-			 */
-			int selTotal = this.getSelectedNumNodes();
-			int selPairCount = entry.getValue();
-			int netPairCount = networkPairCounts.get(pair);
-			double newNetCount = Math.pow(netPairCount, netWeightFactor);
-			int netTotal = this.getNetworkNumNodes();
-			double newNetTotal = Math.pow(netTotal, netWeightFactor);
-			
-			double numerator = selPairCount * newNetTotal;
-			double denominator = selTotal * newNetCount;
-			double ratio = numerator/denominator;
-			
-			pairRatios.put(pair, ratio);
-		}
-		ratiosInitialized = true;
-	}
-	
-	/**
-	 * Creates a cloud clustering object and clusters based on the parameter
-	 * in this CloudParameters.
-	 * @throws  
-	 */
-	public void calculateFontSizes()
-	{
-		if (!ratiosInitialized)
-			this.updateRatios();
-		
-		//Clear old fonts
-		this.cloudWords = new ArrayList<CloudWordInfo>();
-		
-		if (displayStyle.equals(CloudDisplayStyles.NO_CLUSTERING))
-		{
-			for (Entry<String, Double> entry : ratios.entrySet())
-			{
-				String curWord = entry.getKey();
-				int fontSize = calculateFontSize(curWord, entry.getValue());
-				CloudWordInfo curInfo = new CloudWordInfo(curWord, fontSize);
-				curInfo.setCloudParameters(this);
-				cloudWords.add(curInfo);
-			}//end while loop
-			
-			//Sort cloudWords in order by fontsize
-			Collections.sort(cloudWords);
-		}
-		else
-		{
-			SemanticSummaryClusterBuilder builder = new SemanticSummaryClusterBuilder(this);
-			builder.clusterData(this.getClusterCutoff());
-			builder.buildCloudWords();
-			cloudWords = builder.getCloudWords();
-		}
-	}
-	
-	
-	/**
-	 * Calculates the font for a given word by using its ratio, the max and
-	 * min ratios as well as the max and min font size in the parent 
-	 * parameters object.  Assumes ratios are up to date and that word
-	 * is in the selected nodes.
-	 * @return int - the calculated font size for the specified word.
-	 */
-	public int calculateFontSize(String aWord, double ratio)
-	{
-		//Zeroed mapping
-		//Get zeroed values for calculations
-		double zeroedMinWeight = minWeight - minWeight;
-		double zeroedMeanWeight = meanWeight - minWeight;
-		double zeroedMaxWeight = maxWeight - minWeight;
-		
-		double zeroedMinRatio = minRatio - minRatio;
-		double zeroedMeanRatio = meanRatio - minRatio;
-		double zeroedMaxRatio = maxRatio - minRatio;
-		
-		double zeroedRatio = ratio - minRatio;
-		
-		double newRatio = zeroedRatio * zeroedMeanWeight / zeroedMeanRatio;
-		
-		//Weighted Average
-		int maxFont = NetworkParameters.MAXFONTSIZE;
-		int minFont = NetworkParameters.MINFONTSIZE;
-		
-		//Check if maxRatio and minRatio are the same
-		if (isCloseEnough(zeroedMaxRatio, zeroedMinRatio))
-			return (minFont + (maxFont - minFont)/2);
-		
-		double slope = (maxFont - minFont)/(zeroedMaxWeight - zeroedMinWeight);
-		double yIntercept = maxFont - (slope*zeroedMaxWeight); //maxRatio maps to maxFont
-		
-		//Round up to nearest int
-		long temp = Math.round((slope*newRatio) + yIntercept);
-		int fontSize = Math.round(temp);
-		
-		return fontSize;
-	}
-	
-	private boolean isCloseEnough(double d1, double d2) {
-		return Math.abs(d1 - d2) <= EPSILON * Math.max(Math.abs(d1), Math.abs(d2));
-	}
 
-//	/**
-//	 * Retrieves values from Input panel and stores in correct places.
-//	 * @return
-//	 */
-//	public void retrieveInputVals(SemanticSummaryInputPanel inputPanel)
-//	{
-//		//Network Weight Stuff
-//		SliderBarPanel panel = inputPanel.getSliderBarPanel();
-//		double netNorm = panel.getNetNormValue();
-//		this.setNetWeightFactor(netNorm);
-////		Boolean selected = true; // inputPanel.getUseNetworkCounts().isSelected();
-////		this.useNetNormal = selected;
-//		
-//		
-//		//Attribute
-//		Object[] attributes = inputPanel.getAttributeList().getSelectedValues();
-//		ArrayList<String> attributeList = new ArrayList<String>();
-//		
-//		for (int i = 0; i < attributes.length; i++)
-//		{
-//			Object curAttribute = attributes[i];
-//			
-//			if (curAttribute instanceof String)
-//			{
-//				attributeList.add((String) curAttribute);
-//			}
-//		}
-//		setAttributeNames(attributeList);
-//			
-//		//Max Words
-////		JFormattedTextField maxWordsTextField = inputPanel.getMaxWordsTextField();
-//		
-////		Number value = (Number) maxWordsTextField.getValue();
-////		if ((value != null) && (value.intValue() >= 0))
-////		{
-////			setMaxWords(value.intValue()); 
-////		}
-////		else
-////		{
-////			maxWordsTextField.setValue(defaultMaxWords);
-//			setMaxWords(defaultMaxWords);
-////			String message = "The maximum number of words to display must be greater than or equal to 0.";
-////			JOptionPane.showMessageDialog(inputPanel, message, "Parameter out of bounds", JOptionPane.WARNING_MESSAGE);
-////		}
-//		
-////		//Cluster Cutoff
-////		JFormattedTextField clusterCutoffTextField = inputPanel.getClusterCutoffTextField();
-////		
-////		value = (Number) clusterCutoffTextField.getValue();
-////		if ((value != null) && (value.doubleValue() >= 0.0))
-////		{
-////			setClusterCutoff(value.doubleValue()); //sets all necessary flags
-////		}
-////		else
-////		{
-////			clusterCutoffTextField.setValue(defaultClusterCutoff);
-//			setClusterCutoff(defaultClusterCutoff);
-////			String message = "The cluster cutoff must be greater than or equal to 0";
-////			JOptionPane.showMessageDialog(inputPanel, message, "Parameter out of bounds", JOptionPane.WARNING_MESSAGE);
-////		}
-//		
-//		//Style
-//		Object style = inputPanel.getCMBStyle().getSelectedItem();
-//		if (style instanceof String)
-//			setDisplayStyle((String) style);
-//		else
-//		{
-//			setDisplayStyle(defaultStyle);
-//			inputPanel.getCMBStyle().setSelectedItem(defaultStyle);
-//			String message = "You must select one of the available styles.";
-//			JOptionPane.showMessageDialog(inputPanel, message, "Parameter out of bounds", JOptionPane.WARNING_MESSAGE);
-//		}
-//	}
 	
 	/**
 	 * String representation of CloudParameters.
@@ -832,16 +297,16 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 		
 		paramVariables.append("NetWeightFactor\t" + netWeightFactor + "\n");
 		paramVariables.append("ClusterCutoff\t" + clusterCutoff + "\n");
-		paramVariables.append("CountInitialized\t" + countInitialized + "\n");
-		paramVariables.append("SelInitialized\t" + selInitialized + "\n");
-		paramVariables.append("RatiosInitialized\t" + ratiosInitialized + "\n");
-		paramVariables.append("MinRatio\t" + minRatio + "\n");
-		paramVariables.append("MaxRatio\t" + maxRatio + "\n");
-		paramVariables.append("MaxWords\t" + maxWords + "\n");
-		paramVariables.append("MeanRatio\t" + meanRatio + "\n");
-		paramVariables.append("MeanWeight\t" + meanWeight + "\n");
-		paramVariables.append("MaxWeight\t" + maxWeight + "\n");
-		paramVariables.append("MinWeight\t" + minWeight + "\n");
+//		paramVariables.append("CountInitialized\t" + countInitialized + "\n");
+//		paramVariables.append("SelInitialized\t" + selInitialized + "\n");
+//		paramVariables.append("RatiosInitialized\t" + ratiosInitialized + "\n");
+//		paramVariables.append("MinRatio\t" + minRatio + "\n");
+//		paramVariables.append("MaxRatio\t" + maxRatio + "\n");
+//		paramVariables.append("MaxWords\t" + maxWords + "\n");
+//		paramVariables.append("MeanRatio\t" + meanRatio + "\n");
+//		paramVariables.append("MeanWeight\t" + meanWeight + "\n");
+//		paramVariables.append("MaxWeight\t" + maxWeight + "\n");
+//		paramVariables.append("MinWeight\t" + minWeight + "\n");
 		paramVariables.append("CloudNum\t" + cloudNum + "\n");
 //		paramVariables.append("UseNetNormal\t" + useNetNormal + "\n");
 		paramVariables.append("NetworkCount\t" + networkCount + "\n");
@@ -849,174 +314,25 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 			paramVariables.append("ClusterTableName\t" + clusterTable.getTitle() + "\n");
 		}
 		
-		//List of Nodes as a comma delimited list
-		StringBuffer output2 = new StringBuffer();
-		for (int i = 0; i < cloudWords.size(); i++)
-		{
-			output2.append(cloudWords.get(i).toString() + WORDDELIMITER);
-		}
-		
-		paramVariables.append("CloudWords\t" + output2.toString() + "\n");
+//		//List of Nodes as a comma delimited list
+//		StringBuffer output2 = new StringBuffer();
+//		for (int i = 0; i < cloudWords.size(); i++)
+//		{
+//			output2.append(cloudWords.get(i).toString() + WORDDELIMITER);
+//		}
+//		
+//		paramVariables.append("CloudWords\t" + output2.toString() + "\n");
 		
 		return paramVariables.toString();
 	}
 	
-	/**
-	 * This method repopulates a properly specified Hashmap from the given file and type.
-	 * @param fileInput - file name where the has map is stored
-	 * @param type - the type of hashmap in the file.  The hashes are repopulated
-	 * based on the property file stored in the session file.  The property file
-	 * specifieds the type of objects contained in each file and this is needed in order
-	 * to create the proper has in the current set of parameters.
-	 * types are Counts(1) and Mapping(2)
-	 * @return properly constructed Hashmap repopulated from the specified file.
-	 */
-	public HashMap repopulateHashmap(String fileInput, int type)
-	{
-		//Hashmap to contain values from the file
-		HashMap newMap;
-		
-		//Counts (network or selected)
-		if (type == 1)
-			newMap = new HashMap<String, Integer>();
-		//Mapping
-		else if (type == 2)
-			newMap = new HashMap<String, List<String>>();
-		//Ratios
-		else if (type == 3)
-			newMap = new HashMap<String, Double>();
-		else
-			newMap = new HashMap();
-		
-		//Check that we have input
-		if (!fileInput.equals(""))
-		{
-			String [] lines = fileInput.split("\n");
-		
-			for (int i = 0; i < lines.length; i++)
-			{
-				String line = lines[i];
-				String [] tokens = line.split("\t");
-			
-				//the first token is the key and the rest is the object
-				//Different types have different data
-			
-				//Counts
-				if (type == 1)
-					newMap.put(tokens[0], Integer.parseInt(tokens[1]));
-			
-				//Mapping
-				if (type == 2)
-				{
-					//Create List
-					String [] nodes = tokens[1].split(NODEDELIMITER);
-					ArrayList nodeNames = new ArrayList<String>();
-					for (int j =0; j < nodes.length; j++)
-						nodeNames.add(nodes[j]);
-				
-					newMap.put(tokens[0], nodeNames);
-				}
-			
-				//Ratios
-				if (type == 3)
-					newMap.put(tokens[0], Double.parseDouble(tokens[1]));
-			}//end line loop
-		}//end if data exists check
-		return newMap;
-	}
 	
-	/**
-	 * This method takes in the ID of a node and returns the string that is associated
-	 * with that node and the current attribute of this CloudParameters.
-	 * @param CyNode - node we are interested in 
-	 * @param String - name of the attribute we are interested in
-	 * @return String - value stored in the current attribute for the given node.
-	 */
-	private String getNodeAttributeVal(CyNetwork network, CyNode curNode, String attributeName)
-	{
-		CyTable table = network.getDefaultNodeTable();
-		CyColumn column = table.getColumn(attributeName);
-		if (column.getType().equals(String.class)) {
-			return table.getRow(curNode.getSUID()).get(attributeName, String.class);
-		}
-		if (column.getType().equals(List.class) && column.getListElementType().equals(String.class)) {
-			List<String> list = table.getRow(curNode.getSUID()).getList(attributeName, String.class);
-			if (list == null) {
-				return null;
-			}
-			return join(" ", list);
-		}
-		return null;
-	}//end method
 	
-	private String join(String delimiter, List<String> list) {
-		StringBuilder buffer = new StringBuilder();
-		boolean first = true;
-		for (String item : list) {
-			if (first) {
-				first = false;
-			} else {
-				buffer.append(delimiter);
-			}
-			buffer.append(item);
-		}
-		return buffer.toString();
-	}
+	
+	
+	
 
-	/**
-	 * This method takes in a string from a node and processes it to lower case, removes
-	 * punctuation and separates the words into a non repeated list.
-	 * @param String from a node that we are processing.
-	 * @return Set of distinct words.
-	 */
-	private List<String> processNodeString(String nodeValue)
-	{
-		//Only deal with lower case
-		nodeValue = nodeValue.toLowerCase();
-		
-		//replace all punctuation with white spaces except ' and -
-		//nodeValue = nodeValue.replaceAll("[[\\p{Punct}] && [^'-]]", " ");
-		String controlString = Character.toString(controlChar);
-		
-		//Remove all standard delimiters and replace with controlChar
-		WordDelimiters delims = this.getNetworkParams().getDelimeters();
-		nodeValue = nodeValue.replaceAll(delims.getRegex(),controlString);
-        
-		//Remove all user stated delimiters and replace with controlChar
-		for (Iterator<String> iter = delims.getUserDelims().iterator(); iter.hasNext();)
-		{
-			String userDelim = iter.next();
-			nodeValue = nodeValue.replaceAll(userDelim, controlString);
-		}
-		
-        //Separate into non repeating set of words
-		List<String> wordSet = new ArrayList<String>();
-		StringTokenizer token = new StringTokenizer(nodeValue, controlString);
-        while (token.hasMoreTokens())
-        {
-        	String a = token.nextToken();
-        	
-        	
-        	//Stem the word if parameter is set
-        	if (this.getNetworkParams().getIsStemming()) //Check for stemming
-        	{
-        		Stemmer stem = new Stemmer();
-        		for (int i = 0; i < a.length(); i++)
-        		{
-        			char ch = a.charAt(i);
-        			stem.add(ch);
-        		}
-        		stem.stem();
-        		a = stem.toString();
-        	}
-        	
-        	
-        	if (!wordSet.contains(a))
-        		wordSet.add(a);
-        }
-        
-        return wordSet;
-	}
+	
 	
 	/**
 	 * Compares two CloudParameters objects based on the order in which they
@@ -1024,11 +340,9 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 	 * @param CloudParameters object to compare this object to
 	 * @return
 	 */
-	public int compareTo(CloudParameters compare) 
+	public int compareTo(CloudParameters other) 
 	{	
-		int thisCount = this.getCloudNum();
-		int compareCount = compare.getCloudNum();
-		return thisCount - compareCount;
+		return cloudNum - other.cloudNum;
 	}
 	
 	/**
@@ -1099,9 +413,7 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 		//Set flags
 		if (changed)
 		{
-			countInitialized = false;
-			selInitialized = false;
-			ratiosInitialized = false;
+			invalidate();
 		}
 		
 		//Set to new value
@@ -1117,9 +429,7 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 		if (!attributeNames.contains(name))
 		{
 			attributeNames.add(name);
-			countInitialized = false;
-			selInitialized = false;
-			ratiosInitialized = false;
+			invalidate();
 		}
 	}
 	
@@ -1154,9 +464,7 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 	public void setSelectedNodes(Collection<CyNode> nodes)
 	{
 		setSelectedNodes(networkParams.getNetwork(), nodes);
-		
-		selInitialized = false; //So we update when SelectedNodes change
-		ratiosInitialized = false; //need to update ratios
+		invalidate();
 	}
 	
 	private void setSelectedNodes(CyNetwork network, Collection<CyNode> nodes) {
@@ -1192,48 +500,38 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 
 	public Map<String, Set<CyNode>> getStringNodeMapping()
 	{
-		return stringNodeMapping;
-	}
-	
-	public Map<String,Integer> getNetworkCounts()
-	{
-		return networkCounts;
+		return getBuilder().getStringNodeMapping();
 	}
 	
 	public Map<String,Integer> getSelectedCounts()
 	{
-		return selectedCounts;
+		return getBuilder().getSelectedCounts();
 	}
 	
 	public Map<WordPair,Integer> getSelectedPairCounts()
 	{
-		return selectedPairCounts;
-	}
-	
-	public Map<WordPair,Integer> getNetworkPairCounts()
-	{
-		return networkPairCounts;
+		return getBuilder().getSelectedPairCounts();
 	}
 	
 	public Map<String,Double> getRatios()
 	{
-		return ratios;
+		return getBuilder().getRatios();
+	}
+	
+	public int calculateFontSize(String aWord, double ratio) {
+		return getBuilder().calculateFontSize(aWord, ratio);
 	}
 	
 	public Map<WordPair,Double> getPairRatios()
 	{
-		return pairRatios;
+		return getBuilder().getPairRatios();
 	}
 	
 	public List<CloudWordInfo> getCloudWordInfoList()
 	{
-		return cloudWords;
+		return getBuilder().getCloudWordInfoList();
 	}
 	
-	public void setCloudWordInfoList(ArrayList<CloudWordInfo> words)
-	{
-		cloudWords = words;
-	}
 	
 	public int getNetworkNumNodes()
 	{
@@ -1249,93 +547,12 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 
 	public double getMinRatio()
 	{
-		return minRatio;
-	}
-	
-	public void setMinRatio(double ratio)
-	{
-		minRatio = ratio;
+		return cloudWordInfoBuilder.getMinRatio();
 	}
 	
 	public double getMaxRatio()
 	{
-		return maxRatio;
-	}
-	
-	public void setMaxRatio(double ratio)
-	{
-		maxRatio = ratio;
-	}
-	
-	public double getMeanRatio()
-	{
-		return meanRatio;
-	}
-	
-	public void setMeanRatio(double ratio)
-	{
-		meanRatio = ratio;
-	}
-	
-	public double getMinWeight()
-	{
-		return minWeight;
-	}
-	
-	public void setMinWeight(double val)
-	{
-		minWeight = val;
-	}
-	
-	public double getMaxWeight()
-	{
-		return maxWeight;
-	}
-	
-	public void setMaxWeight(double val)
-	{
-		maxWeight = val;
-	}
-	
-	public double getMeanWeight()
-	{
-		return meanWeight;
-	}
-	
-	public void setMeanWeight(double val)
-	{
-		meanWeight = val;
-	}
-	
-	
-	public boolean getCountInitialized()
-	{
-		return countInitialized;
-	}
-	
-	public void setCountInitialized(boolean val)
-	{
-		countInitialized = val;
-	}
-	
-	public boolean getSelInitialized()
-	{
-		return selInitialized;
-	}
-	
-	public void setSelInitialized(boolean val)
-	{
-		selInitialized = val;
-	}
-	
-	public boolean getRatiosInitialized()
-	{
-		return ratiosInitialized;
-	}
-	
-	public void setRatiosInitialized(boolean val)
-	{
-		ratiosInitialized = val;
+		return cloudWordInfoBuilder.getMaxRatio();
 	}
 	
 	public double getNetWeightFactor()
@@ -1345,10 +562,6 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 	
 	public void setNetWeightFactor(double val)
 	{
-		//Reset flags if net Weight changes
-		if (netWeightFactor != val)
-			ratiosInitialized = false;
-		
 		netWeightFactor = val;
 	}
 	
@@ -1382,26 +595,16 @@ public class CloudParameters implements Comparable<CloudParameters>, CloudProvid
 		cloudNum = num;
 	}	
 	
-	public String getDisplayStyle()
+	public CloudDisplayStyles getDisplayStyle()
 	{
 		return displayStyle;
 	}
 	
-	public void setDisplayStyle(String style)
+	public void setDisplayStyle(CloudDisplayStyles style)
 	{
 		displayStyle = style;
 	}
 	
-//	public boolean getUseNetNormal()
-//	{
-//		return useNetNormal;
-//	}
-//	
-//	public void setUseNetNormal(boolean val)
-//	{
-//		useNetNormal = val;
-//	}
-
 	public String getClusterColumnName() {
 		return clusterColumnName;
 	}
